Remove page height limit Allow background to cover full vertical scroll on mobile. Max-height property was preventing this.

--- a/src/App.css
+++ b/src/App.css
@@ -21,5 +21,4 @@ body {
   flex-direction: column;
   align-items: center;
   max-width: 950px;
-  max-height: 1200px;
 }
